hphp/hack/test/typecheck/instanceof_naming.php.exp
File "instanceof_naming.php", line 4, characters 21-30:
Unexpected node on right hand side of instanceof: array_intrinsic_expression (Parsing[1002])
