hphp/hack/test/typecheck/instanceof_naming.php
<?hh

function f($x) {
  if ($x instanceof array(1, 2)) {
  }
}
